@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; 2008 Chris Gianelloni, Andrew Gaffney
 # Distributed under the GPL v2
 
+  13 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> gen_compile.sh:
+  Unpack fuse source and modify CFLAGS for unionfs-fuse
+
   12 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> gen_compile.sh,
   genkernel.conf:
   Unpack unionfs-fuse with -j
